# Lumen

./: .gitignore  ARCHITECTURE.md  BACKEND_FIXES_COMPLETE.md  BROWSER_IS_RUNNING.md  BUGFIXES_SUMMARY.md  BUILD_COMPLETE.md  BUILD_COMPLETE_BROWSER.md  BUILD_COMPLETE_FINAL.md  BUILD_SETUP.md  BUILD_SUCCESS.md  BUILD_WINDOWS.md  CHANGELOG.md  CHROME_ALTERNATIVE_STRATEGY.md  CHROME_DESIGN_v3.md  CLEANUP_SUMMARY.md  COMPACT_UI_REFINED.md  COMPLETE_BROWSER_SUMMARY.md  COMPLETE_SUMMARY.md  CONTRIBUTING.md  DESIGN_ENHANCEMENTS.md  DEVELOPMENT.md  DISK_SPACE_SOLUTIONS.md  ELECTRON_BUILD.md  EXTENSIONS_FEATURES.md  EXTENSION_GUIDE.md  FULL_BROWSER_IMPLEMENTATION.md  HOW_TO_RUN.md  IMPLEMENTATION_COMPLETE.md  INSTALL_BUILD_TOOLS.md  ISSUE_RESOLVED.md  LICENSE  NEW_FEATURES_SUMMARY.md  PORTABLE_README.txt  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  READY_TO_SHIP.md  SEARCH_FIXED.md  SEARCH_NOT_WORKING_EXPLAINED.md  (+16 more)
src/: main-v2.js  main.js  styles-chrome.css  styles-v2.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
